can create, get all and add device to rent, with some tests
